styles/style.css
* {
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
}

article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary {  display: block;}

body {
    font-family: 'Source Sans Pro Light';
    color: #333;
}

h1{
    font-family: 'Source Sans Pro Light';
    font-size: 4.8rem;
    text-align: center;
    color: #FFF;
}

nav {
    height: 10rem;
    font-size: 1.2rem;
}

header {
    margin: 0 auto;
    max-width: 60rem;
    color: #FFF;
}
/*------------------ POSITION ----------------------*/
.el-left {
    float: left;
}

.el-right {
    float: right;
}

.el-padding-left, .col-padding-left{
    padding-left: 2rem;
}

.el-padding-right, .col-padding-right{
    padding-right: 2rem;
}

/*------------------ FIRST PAGE ----------------------*/
.pg1 {
    position: relative;
    height: 75vh;
    background-size: cover;
    background-repeat: no-repeat;
    background-image: url(../img/background.jpg);
}
.title {
    position: relative;
    font-size: 6rem;
    font-family: 'Lato Regular';
}

.title-description {
    position: relative;
    font-size: 2.35rem;
    max-width: 100%;
    margin-bottom: 1.4rem;
}

.install-prompt {
    font-size: 1.6rem;
    background-color: #FFF;
    white-space: pre;
    -webkit-animation-name: blinker;
    -webkit-animation-duration: 1.4s;
    -webkit-animation-timing-function: ease;
    -webkit-animation-iteration-count: infinite;
    
    -moz-animation-name: blinker;
    -moz-animation-duration: 1.4s;
    -moz-animation-timing-function: linear;
    -moz-animation-iteration-count: infinite;
    
    animation-name: blinker;
    animation-duration: 1.4s;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
}

@-moz-keyframes blinker {  
    0% { opacity: 1.0; }
    50% { opacity: 0.0; }
    100% { opacity: 1.0; }
}

@-webkit-keyframes blinker {  
    0% { opacity: 1.0; }
    50% { opacity: 0.0; }
    100% { opacity: 1.0; }
}

@keyframes blinker {  
    0% { opacity: 1.0; }
    50% { opacity: 0.0; }
    100% { opacity: 1.0; }
}

.button {
    display: inline-block;
    font-family: 'Source Sans Pro Light';
    font-size: 1.6rem;
    color: white;
    background-color: hsl(220, 60%, 15%);
    border: none;
    padding: 20px 0;
    width: 33%;
    transition: all 800ms;
    text-decoration: none;
    text-align: center;
    vertical-align: middle;
}

.button:hover {
    background: hsl(128, 53%, 36%);
    transition: all 800ms;
}

/*------------------ FEATURES PAGE ----------------------*/

.pg2 {
    position: relative;
    padding-top: 1rem;
    height: 100%;
    background-color: #FFF;
}

.col{
    display: inline-block;
    margin-top: 2rem;
    margin-bottom: 4rem;
}

.col-text-title {
    position: relative;
    display: inline-block;
    font-size: 2.4rem;
    font-weight: bold;
    line-height: 110%;
    vertical-align: middle;
    margin-bottom: 1.2rem;
    width: 60%;
}

.col-padding-left{
    padding-left: 2rem;
}

.col-padding-right{
    padding-right: 2rem;
}

.col-img {
    position: relative;
    display: inline-block;
    height: 10rem;
    width: 40%;
    vertical-align: middle;
    background: url(../img/fishes.svg) no-repeat;
}
.col-img-left {
    float: left;
}

.col-img-right {
    float: right;
}

.col-text{
    position: relative;
    display: inline-block;
    font-size: 1.2rem;
    vertical-align: middle;
    text-align: justify;
    width: 60%;
}

/*------------------ GET STARTED HEADER ----------------------*/
.pg2-3 {
    position: relative;
    padding-top: 2rem;
    padding-bottom: 2rem;
    height: 100%;
    background-color: #E0E2E3;
}



/*------------------ GET STARTED CONTENT PAGE ----------------------*/
.pg3 {
    padding-top: 2rem;
    position: relative;
    height: 100%;
    background-color: #FFF;
}
.box {
    display: inline-block;
    margin-top: 2rem;
    margin-bottom: 6rem;
}

.box-code {
    position: relative;
    display: inline-block;
    background-color: hsl(220, 60%, 15%);
    width: 40%;
    height: 12.5rem;
    padding-top: 1rem;
    padding-left: 1rem;
    vertical-align: middle;
}

pre{
    font-family: 'DejaVuSans-extralight',"Lucida Console", Courier, monospace;
    font-size: 0.8rem;
    font-weight: bold;
    white-space: pre-wrap; 
    line-height: 125%;
    margin: 0; 
}

.box-code-left {
    float: left;
}

.box-code-right {
    float: right;
}

.box-text-title {
    position: relative;
    display: inline-block;
    font-size: 2.4rem;
    font-weight: bold;
    line-height: 110%;
    vertical-align: middle;
    margin-bottom: 1.2rem;
    width: 60%;
}

.box-padding-left{
    padding-left: 2rem;
}

.box-padding-right{
    padding-right: 2rem;
}

.box-text{
    position: relative;
    display: inline-block;
    font-size: 1.2rem;
    vertical-align: middle;
    text-align: justify;
    width: 60%;
}


/*------------------ FOOTER PAGE ----------------------*/

.pg4 {
    position: relative;
    height: auto;
    padding-top: 2rem;
    background-color: hsl(213, 38%, 22%);
    color: #FFF;
    border-bottom-style: solid;
    border-bottom-width: 20px;
    border-bottom-color: hsl(213, 38%, 18%);
}




.wrapper {
    position: relative;
    display: block;
    max-width: 60rem;
    margin: 0 auto;
}

.content {
    position: relative;
    width: 100%;
    line-height: 160%;
}

hr{
    height: 4rem;
    background: url(../img/seal-wh.svg) no-repeat 50% 50%;
    margin-top: 1rem;
    border: 0;
}

